yaml_files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todouiservice
spec:
  selector:
    app: todoui
  ports:
  - port: 80
    targetPort: 80
